# review-benchmark-harness

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
examples/sample-suite/: manifest.json
examples/sample-suite/cases/: RBH-001.json  RBH-002.json
examples/sample-suite/patches/: RBH-001.diff  RBH-002.diff
examples/sample-suite/predictions/good/: RBH-001.md  RBH-002.json
examples/sample-suite/predictions/noisy/: RBH-001.md  RBH-002.md
src/review_benchmark_harness/: __init__.py  checks.py  cli.py  commands.py  diff_parser.py  io.py  matching.py  metrics.py  models.py  normalization.py  reports.py
tests/: test_checks.py  test_cli.py  test_commands.py  test_diff_parser.py  test_matching.py  test_metrics.py  test_normalization.py  test_reports.py
